debian-installer-utils (1.19) UNRELEASED; urgency=low

  * Add in-target command used to run a command in /target with debconf
    passthrough.

 -- Joey Hess <joeyh@debian.org>  Fri,  2 Dec 2005 23:47:35 -0500

debian-installer-utils (1.19) unstable; urgency=low

  * Add new update-dev program to centralise duplicated
    userdevfs/udev-prodding code from hw-detect, partman-base,
    partman-auto-lvm, and rootskel.

  [ Updated translations ]
  * Malagasy (mg.po) by Jaonary Rabarisoa
  * Romanian (ro.po) by Eddy Petrişor

 -- Colin Watson <cjwatson@debian.org>  Wed, 30 Nov 2005 21:19:55 +0000

debian-installer-utils (1.18) unstable; urgency=low

  * Make apt-get use gpgv --ignore-time-conflict to avoid validation errors
    due to clock problems.
  * Split out part of di-utils-shell.postinst into a new debconf-disconnect
    command; rescue-mode uses the same code.

  [ Updated translations ]
  * Czech (cs.po) by Miroslav Kure
  * German (de.po) by Jens Seidel

 -- Colin Watson <cjwatson@debian.org>  Sun, 20 Nov 2005 13:57:08 +0000

debian-installer-utils (1.17) unstable; urgency=low

  [ Joey Hess ]
  * Indentation consistency.

  [ Colin Watson ]
  * Add myself to debian/copyright for log-output.

  [ Frans Pop ]
  * Also mount /target/sys in apt-install to support installation of 2.6.14
    and higher kernels using yaird/initramfs-tools.

  [ Joey Hess ]
  * Ignore shell return code in postinst script since it can exit nonzero
    in several normal uses.

  [ Updated translations ]
  * Bengali (bn.po) by Baishampayan Ghose
  * Hindi (hi.po) by Nishant Sharma
  * Icelandic (is.po) by David Steinn Geirsson
  * Norwegian Nynorsk (nn.po)
  * Swedish (sv.po) by Daniel Nylander
  * Tagalog (tl.po) by Eric Pareja

 -- Frans Pop <fjp@debian.org>  Tue, 15 Nov 2005 20:40:50 +0100

debian-installer-utils (1.16) unstable; urgency=low

  [ Colin Watson ]
  * Replace log-output with a C implementation that doesn't stomp on fds 3