@@ -20,7 +20,7 @@ straightaway (and noninteractively).
 in-target: Runs the specified command in /target and returns its exit
 status. The debconf passthrough frontend is used to make debconf questions
 be asked using cdebconf in the installer. This is especially useful for
-running things like dpkg-reconfigure and tasksel.
+running things like dpkg-reconfigure, debconf-apt-progress, and tasksel.
 
 debconf-get: Prints out the value of a debconf question.
 
