@@ -37,6 +37,7 @@ binary-arch: build
 	                      debconf-get debconf-set log-output \
 	                      register-module search-path update-dev \
 	                      user-params in-target bin
+	dh_install -pdi-utils chroot-setup.sh lib
 	dh_installdirs -pdi-utils usr/lib/prebaseconfig.d
 	install register-module.prebaseconfig debian/di-utils/usr/lib/prebaseconfig.d/50register-module
 	dh_install -pdi-utils-mapdevfs mapdevfs bin
