@@ -2,8 +2,13 @@ debian-installer-utils (1.19) UNRELEASED; urgency=low
 
   * Add in-target command used to run a command in /target with debconf
     passthrough.
+  * Split general purpose parts of apt-install out into chroot-setup.sh.
+  * Also added code to chroot-setup.sh to pass through the debconf
+    frontend and the installation language.
+  * Make in-target use chroot-setup.sh, so it can be used to run commands that
+    install packages, like tasksel.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  2 Dec 2005 23:47:35 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun,  4 Dec 2005 15:03:39 -0500
 
 debian-installer-utils (1.19) unstable; urgency=low
 
